--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "setup-perforce-github-action",
-  "version": "0.1.0",
+  "name": "setup-p4-github-action",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cloud-creative-studios/setup-perforce-github-action.git"
+    "url": "git+https://github.com/cloud-creative-studios/setup-p4-github-action.git"
   },
   "keywords": [
     "actions",
@@ -17,9 +17,9 @@
   "author": "akiojin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cloud-creative-studios/setup-perforce-github-action/issues"
+    "url": "https://github.com/cloud-creative-studios/setup-p4-github-action/issues"
   },
-  "homepage": "https://github.com/cloud-creative-studios/setup-perforce-github-action#readme",
+  "homepage": "https://github.com/cloud-creative-studios/setup-p4-github-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@akiojin/p4-command": "^0.1.0"
