Perforceのサーバー指定のシンボルを変更

--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'setup-perforce-github-action'
 description: 'Setup Perforce GitHub action'
 inputs:
-  ip:
+  p4-server:
     description: >
       Specify the IP address of the Perforce server.
     required: true
