--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cloud-creative-studios/setup-p4-github-action.git"
+    "url": "https://github.com/akiojin/setup-p4-github-action.git"
   },
   "keywords": [
     "actions",
-    "dotnet"
+    "perforce",
+    "p4"
   ],
   "author": "akiojin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cloud-creative-studios/setup-p4-github-action/issues"
+    "url": "https://github.com/akiojin/setup-p4-github-action/issues"
   },
-  "homepage": "https://github.com/cloud-creative-studios/setup-p4-github-action#readme",
+  "homepage": "https://github.com/akiojin/setup-p4-github-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@akiojin/p4-command": "^0.1.1"
